--- a/CarsCrete/ClientApp/src/app/messager/messager.component.css
+++ b/CarsCrete/ClientApp/src/app/messager/messager.component.css
@@ -27,26 +27,31 @@
     z-index: 305;
 }
 .messages{
-    max-height: 600px;
+    position: relative;
+    max-height:600px;
+    height: 85%;
     overflow-y: scroll;
     padding: 10px;
+    display: inline-block;
 
 }
 .Profile{
     z-index: 310;
     position: absolute;
     display: block;
+    
     bottom: auto;
     right: -520px;
-    top: 10px;
-
+    top: 0;
+    height: 125%;
     left:auto;
     width: 500px !important;
     border: none !important;
     border-radius: 4px;
-    box-shadow: none;
-    background-color: rgb(113, 113, 238);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.555);
+    background-color: rgb(255, 255, 255);
 }
+
 .panel{
     border: none;
     display: flex;
@@ -59,14 +64,18 @@
     right: 0;
     font-size: 18px;
     line-height: 26px;
-    background-color: blue;
+    
     color:white;
     border-radius: 0 4px 4px 0;
     width: 30px;
+    background-color: rgb(79, 119, 250);
     height: 30px;  
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.panel i:hover{
+    background-color: blue;
 }
 .Profile textarea{
     width: 100%;
@@ -87,6 +96,7 @@
 }
 .Profile .header{
     width: auto;
+    font-size: 30px;
     border-radius: 5px;
     position: absolute;
     left: -50px;
@@ -106,6 +116,7 @@ h3{
     margin-left: 2px;
 }
 .header{
+    opacity: 1;
     padding: 10px;
     text-align: center;
     margin: -10px -10px 0 -10px;
@@ -113,6 +124,7 @@ h3{
     border-radius: 4px 4px 0 0;
     color: white;
     cursor: pointer;
+    transition: 0.5s;
     display: flex;
     justify-content: center;
     
@@ -139,7 +151,7 @@ h3{
     justify-content: flex-start;
 }
 .my-message .message-body{
-    background-color: rgb(101, 255, 170);
+    background-color: rgb(147, 255, 196);
 }
 .my-message{
     
@@ -147,19 +159,76 @@ h3{
 }
 .message-body{
     max-width: 60%;
-    border-radius: 5px;
+    border-radius: 10px;
     padding: 10px;
-    background-color: rgb(101, 168, 255);
+    background-color: rgb(164, 201, 250);
 }
 .message-body span{
     display: block;
     width: 100%;
-    margin-bottom: 10px; 
-    
+    color: rgb(124, 124, 124);
+    font-size: 10px; 
+    text-align: end;
     
 }
 
 
-.my-message .message-body span{
-    text-align: end;
+.hidden-header{
+    opacity: 0 !important;
+}
+.header-small{
+    display: none;
+    
+}
+.background-blur{
+    z-index: 290;
+}
+@media (max-width:768px){
+    .header-small{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 50px;
+        height: 50px;
+        border-radius: 5px;
+        position: fixed;
+        right: 20px;
+        bottom: 20px;
+        opacity: 1;
+        padding: 10px;
+        z-index: 300;
+        background-color: rgb(69, 189, 69); 
+        font-size: 30px;
+        color: white;
+        cursor: pointer;
+        
+    }
+    
+    .Profile, .InPage, .container{
+        display: none;
+    }
+    .container{
+        width: 100%;
+        margin: auto;
+        left:auto;
+    }
+    
+    .ProfileShow{
+        position: fixed;
+        display: block;
+        height: 100%;
+        width: 100% !important;
+        right: 0 !important;
+
+        border-radius: 0px;
+        
+    }
+    .panel{
+        margin-top: 10px;
+        margin-bottom: 2px;
+    }
+    .messages{
+        height: 100%;
+    }
+    
 }
