--- a/CarsCrete/ClientApp/src/app/messager/messager.component.css
+++ b/CarsCrete/ClientApp/src/app/messager/messager.component.css
@@ -29,6 +29,7 @@
 .messages{
     position: relative;
     max-height:600px;
+    width: 100%;
     height: 85%;
     overflow-y: scroll;
     padding: 10px;
@@ -233,6 +234,7 @@ h3{
     }
     .messages{
         height: 95%;
+        
     }
     
 }
