--- a/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.html
+++ b/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.html
@@ -98,7 +98,7 @@
       </div>
      
     </div>
-    <messager [userProfile]='true' [userId]="this.userService.currentUser.Id"></messager>
+    <messager [userProfile]='true' [userId]="this.userService.currentUser.Id" [messages]="this.userService.currentUser.Messages"></messager>
   </div>
   <div *ngIf="userService.currentUser?userService.currentUser.Books.length>0:false" class="statistics">
     <!-- <statistics *ngIf="userService.currentUser.Name=='Admin'"></statistics> -->
