--- a/CarsCrete/ClientApp/src/app/messager/messager.component.css
+++ b/CarsCrete/ClientApp/src/app/messager/messager.component.css
@@ -30,8 +30,9 @@
     position: relative;
     max-height:600px;
     width: 100%;
-    height: 85%;
+    height: 70%;
     overflow-y: scroll;
+    overflow-x: hidden;
     padding: 10px;
     display: inline-block;
 
@@ -58,6 +59,7 @@
     display: flex;
     position: relative;
     height: 30px;
+    box-shadow: none !important;
 
 }
 .panel i{
@@ -65,9 +67,9 @@
     right: 0;
     font-size: 18px;
     line-height: 26px;
-    
+    cursor: pointer;
     color:white;
-    border-radius: 0 4px 4px 0;
+    border-radius: 0 0 4px 0;
     width: 30px;
     background-color: rgb(79, 119, 250);
     height: 30px;  
@@ -81,7 +83,7 @@
 .Profile textarea{
     width: 100%;
     padding-right: 33px;
-    border-radius: 4px; 
+    border-radius: 0 4px 4px 4px; 
 }
 .InPage .header{
     background-color: transparent;
@@ -172,7 +174,31 @@ h3{
     text-align: end;
     
 }
-
+.topic{
+    width: 100%;
+    margin: 5px 0 5px 0;
+    border-radius: 10px;
+    background-color: rgb(189, 253, 189);
+    min-height: 50px;
+    cursor: pointer;
+    
+    
+}
+.top-topic{
+    border-radius: 10px 10px 0 0;
+    margin: 0;
+}
+.topic row{
+    height: 50px;
+}
+.topic .col-sm-7, .topic .col-sm-5{
+    height: 50px;
+    display: flex;
+    align-items: center;
+}
+.topic span{
+    margin-left: 10px;
+}
 
 .hidden-header{
     opacity: 0 !important;
@@ -185,6 +211,14 @@ h3{
     z-index: 290;
 }
 @media (max-width:768px){
+    .topic .col-sm-7, .topic .col-sm-5{
+        height: auto;
+        
+    }
+    .topic .row{
+        padding-top: 5px; 
+    }
+    
     .message-body{
         max-width: 80%;
         
@@ -229,7 +263,6 @@ h3{
         
     }
     .panel{
-        margin-top: 10px;
         margin-bottom: 2px;
     }
     .messages{
