--- a/CarsCrete/ClientApp/src/app/messager/messager.component.html
+++ b/CarsCrete/ClientApp/src/app/messager/messager.component.html
@@ -33,15 +33,30 @@
     </div>
     <button class="btn btn-primary" (click)="send()">{{'SEND' | translate }}</button>
   </form>
-  <div *ngIf="userProfile" class="panel">
+  <div class="topic top-topic" (click) = "showTopic()"  *ngIf="userProfile && (!!currentTopic)">
+    <div class="row">
+      <div class="col-sm-7"><span>{{currentTopic.User.Name}}</span></div>
+      <div class="col-sm-5"><span>{{currentTopic.ModifyDate | date: 'HH:mm'}}</span></div>
+    </div>
+  </div>
+  <div *ngIf="userProfile && (!!currentTopic)" class="panel">
     <textarea #message></textarea>
     <i class="fa fa-paper-plane" (click)="sendMessage(message)"></i>
   </div>
+  <div *ngIf="userProfile && topics.length==0" class="panel">
+    <button class="btn btn-default" (click)="CreateTopic()">Написать</button>
+  </div>
   <div *ngIf=" userProfile" class="messages">
-    <div *ngIf="!messages.length>0 && userProfile" class="no-message">
+    <div *ngIf="topics.length==0 && userProfile" class="no-message">
       <span><span>{{'NO_DATA_MESSAGER' | translate }}</span></span>
     </div>
-    <div class="message" [ngClass]="{'my-message': mes.UserId == userId}" *ngFor="let mes of messages">
+    <div class="topic" [ngClass]="{'hidden':!!currentTopic}" (click) = "showTopic(top)"  *ngFor="let top of topics">
+      <div class="row">
+        <div class="col-sm-7"><span>{{top.User.Name}}</span></div>
+        <div class="col-sm-5"><span>{{top.ModifyDate | date: 'HH:mm'}}</span></div>
+      </div>
+    </div>
+    <div  class="message" [ngClass]="{'my-message': mes.UserId == userId}" *ngFor="let mes of currentTopic?currentTopic.Messages:[]">
       <div class="message-body">
         
         <p>{{mes.Text}}</p>
