--- a/CarsCrete/ClientApp/src/app/about-crete/about-crete.component.html
+++ b/CarsCrete/ClientApp/src/app/about-crete/about-crete.component.html
@@ -4,12 +4,12 @@
         <div class="col-sm-10">
             <h1>{{i.Name | translate}}</h1>
             <div>
-                
-                <p><i class="fa fa-book fa-3x pull-left"></i>{{i.Description}}</p>
+
+              <p><i class="fa fa-book fa-3x pull-left"></i>{{Translate.currentLang=='ru'?i.Description:i.DescriptionEng}}</p>
             </div>
             
-            <p *ngIf="i.Description2">{{i.Description2}}</p>
-            <p><i class="fa fa-car fa-3x pull-left"></i> {{i.Road}}</p>
+            <p *ngIf="i.Description2">{{Translate.currentLang=='ru'?i.Description2:i.Description2Eng}}</p>
+            <p><i class="fa fa-car fa-3x pull-left"></i>{{Translate.currentLang=='ru'?i.Road:i.RoadEng}}</p>
         </div>
         <div class="col-sm-2">
             <rating [mark]="i.Rating"></rating>
