--- a/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.html
+++ b/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.html
@@ -168,10 +168,11 @@
                 </div>
               </div>
               <div class="sales">
-                <div (click) = "chooseSale(sale)" class="sale" *ngFor="let sale of sales">
+                <div (click) = "chooseSale(sale)" [ngStyle]="{'box-shadow':sale.Checked?'0 0 20px green':''}" class="sale" *ngFor="let sale of sales">
                   <img src="{{service.car?service.car.Photo:''}}" alt="">
                   <span>{{sale.Discount}}%</span>
                   <i class="fa fa-check-square-o" [ngClass]="{'checked-sale':sale.Checked}" aria-hidden="true"></i>
+                  <span *ngIf="sale.DaysNumber!=0" class="info">>{{sale.DaysNumber}} {{'DAYS'|translate}}</span>
                   <span>{{sale.NewPrice}}€</span>
                 </div>
               </div>
