--- a/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.html
+++ b/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.html
@@ -124,7 +124,7 @@
                       </div>
                     <div class="item">
                         <span [ngClass]="{ 'is-invalid': submitted && f.Tel.errors }">{{'PHONE'|translate}}</span>
-                        <input formControlName="Tel" [ngClass]="{ 'is-invalid': submitted && f.Tel.errors }" value="{{user?(user.Tel?user.Tel:''):''}}" name="name" type="tel" pattern="[0-9]{11}" required>
+                        <input formControlName="Tel" [ngClass]="{ 'is-invalid': submitted && f.Tel.errors }"  name="name" type="tel" pattern="[0-9]{11}" required>
                         <div *ngIf="submitted && f.Tel.errors" class="invalid-feedback">
                           
                           <span class="d-block is-invalid" *ngIf="f.Tel.errors.pattern">{{'FORMAT'|translate}}: 89161782323</span>
@@ -167,16 +167,21 @@
                   </div>
                 </div>
               </div>
-              <div class="sales">
-                <div (click) = "chooseSale(sale)" [ngStyle]="{'box-shadow':sale.Checked?'0 0 20px green':''}" class="sale" *ngFor="let sale of sales">
-                  <img src="{{service.car?service.car.Photo:''}}" alt="">
-                  <span>{{sale.Discount}}%</span>
-                  <i class="fa fa-check-square-o" [ngClass]="{'checked-sale':sale.Checked}" aria-hidden="true"></i>
-                  <span *ngIf="sale.DaysNumber!=0" class="info">>{{sale.DaysNumber}} {{'DAYS'|translate}}</span>
-                  <span>{{sale.NewPrice}}€</span>
+              <div class="item">
+                <div class="sales">
+                  <div (click) = "chooseSale(sale)" [ngStyle]="{'box-shadow':sale.Checked?'0 0 20px green':''}" class="sale" *ngFor="let sale of sales">
+                    <img src="{{service.car?service.car.Photo:''}}" alt="">
+                    <span>{{sale.Discount}}%</span>
+                    <i class="fa fa-check-square-o" [ngClass]="{'checked-sale':sale.Checked}" aria-hidden="true"></i>
+                    <span *ngIf="sale.DaysNumber!=0" class="info">>{{sale.DaysNumber}} {{'DAYS'|translate}}</span>
+                    <span>{{sale.NewPrice}}€/{{'DAY'|translate}}</span>
+                  </div>
+                </div>
+                <div *ngIf="submitted && salesError">
+                  <span class="d-block is-invalid" >{{'SALES_DAYS_VALIDATION'|translate}}</span>
+          
                 </div>
               </div>
-              
               <div class="item ">
                   <span>{{'COMMENT'|translate}}</span>
                   <textarea formControlName="Comment"  cols="10" rows="5" #report></textarea>
