Сделал отображение акций на странице машин

--- a/CarsCrete/ClientApp/src/app/cars/cars.component.html
+++ b/CarsCrete/ClientApp/src/app/cars/cars.component.html
@@ -13,6 +13,13 @@
       <div (click)="showCarInfo(car)" class="car-img">
         <img src="{{car.Photo}}" alt="">
         <div class="blur"></div>
+        <div [ngClass]="{'price':car.Sales.length==0, 'sale-price':car.Sales.length>0}">
+        
+          <span>{{car.Sales.length>0?getCarPrice(car):car.Price}}€</span>
+        </div>
+        <div *ngIf="car.Sales.length>0" class="discount">
+          <span>{{getCarPrice(car,true)}}</span>
+        </div>
       </div>
       <div class="car-info">
         <h5>{{car.Model}}</h5>
