--- a/CarsCrete/ClientApp/src/app/cars/cars.component.css
+++ b/CarsCrete/ClientApp/src/app/cars/cars.component.css
@@ -142,3 +142,61 @@
     margin-top: 5px;
     margin-right: 5px;
 }
+.price{
+    background-image: url("../../assets/images/price.png");
+    background-size: cover;
+    height: 50px;
+    color: white;
+    z-index: 300;
+    width: 80px;
+    position: absolute;
+    top:0;
+    left: 20px;
+}
+.price span{
+    position: absolute;
+    top:20px;
+    left: 40px;
+    transform: rotate(10deg);
+    font-size: 16px;
+    font-weight: bold;
+    
+}
+.sale-price{
+    background-image: url("../../assets/images/price_sale.png");
+    background-size: cover;
+    height: 60px;
+    color: white;
+    z-index: 300;
+    width: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top:5px;
+    left: 20px;
+    font-size: 16px;
+    font-weight: bold;
+}
+.car-img:hover .discount{
+    left:0;
+}
+
+
+.discount{
+    background-image: url("../../assets/images/price_discount.png");
+    background-size: 100% 100%;
+    height: 30px;
+    transition: 0.2s;
+    color: white;
+    z-index: 300;
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top:150px;
+    left: -100px;
+    font-size: 20px;
+    font-weight: bold;
+}
