--- a/CarsCrete/ClientApp/src/app/app.component.html
+++ b/CarsCrete/ClientApp/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-nav-menu [service]='service'></app-nav-menu>
 <router-outlet></router-outlet>
+<sales></sales>
 <footer></footer>
 <messager *ngIf="showMes"></messager>
