--- a/CarsCrete/ClientApp/src/app/messager/messager.component.css
+++ b/CarsCrete/ClientApp/src/app/messager/messager.component.css
@@ -259,7 +259,7 @@ h3{
         
     }
     
-    .Profile, .InPage, .container{
+    .Profile, .container:not(.InPage){
         display: none;
     }
     .container{
