--- a/CarsCrete/ClientApp/src/app/sales/sales.component.html
+++ b/CarsCrete/ClientApp/src/app/sales/sales.component.html
@@ -1,4 +1,7 @@
 
+<div class="container">
+  <h2>{{'SPECIAL_DEALS' | translate}}</h2>
+</div>
 <div *ngIf="showCarousel" id="carousel" class="carousel slide" data-ride="carousel">
   <div class="sales">
     
