--- a/CarsCrete/ClientApp/src/app/contacts/contacts.component.css
+++ b/CarsCrete/ClientApp/src/app/contacts/contacts.component.css
@@ -14,6 +14,7 @@ iframe{
     margin: 40px 0;
 }
 .col-md-7{
+    height: 640px;
     border-right: 1px solid lightgrey;
 }
 a{
@@ -25,6 +26,8 @@ a:hover{
 }
 @media (max-width: 991px){
     .col-md-7{
+        height: auto;
         border-right:none;
+        border-bottom: 1px solid lightgrey;
     }
 }
