При отправлении нового сообщения, на фронте не меняется modifyDate у измененного топика => не изменяется ег оположение в списке топиков.

--- a/CarsCrete/ClientApp/src/app/messager/messager.component.css
+++ b/CarsCrete/ClientApp/src/app/messager/messager.component.css
@@ -259,7 +259,7 @@ h3{
         
     }
     
-    .Profile, .container:not(.InPage){
+    .Profile, .container:not(.InPage):not(.ProfileShow){
         display: none;
     }
     .container{
