Сделал массив дат в date-picker

--- a/CarsCrete/ClientApp/src/app/date-picker/date-picker.component.html
+++ b/CarsCrete/ClientApp/src/app/date-picker/date-picker.component.html
@@ -1,3 +1,10 @@
-<p>
-  date-picker works!
-</p>
+<div class="container">
+  <div class="header">
+    <div class="period"></div>
+    <div class="period-choose"></div>
+  </div>
+  <div class="date-picker">
+    <div class="collumn-headers"></div>
+    <div class="date-items"></div>
+  </div>
+</div>
