--- a/CarsCrete/ClientApp/src/app/rental-policy/rental-policy.component.html
+++ b/CarsCrete/ClientApp/src/app/rental-policy/rental-policy.component.html
@@ -21,13 +21,13 @@
       <h1>{{'CONDITIONS'| translate}}</h1>
     </div>
     <div class="container">
-      <div class="condition">
+      <div class="condition" *ngFor="let cond of conditions">
 
         <h4>
           <i class="fa fa-info-circle"></i>
-          {{'CONDITION_HEADER' | translate}}
+          {{Translate.currentLang=='ru'?cond.Name:cond.Name}}
         </h4>
-        <p>Не следует, однако забывать, что дальнейшее развитие различных форм деятельности способствует подготовки и реализации форм развития. С другой стороны рамки и место обучения кадров способствует подготовки и реализации модели развития. Повседневная практика показывает, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития.</p>
+        <p>{{Translate.currentLang=='ru'?cond.Description:cond.Description}}</p>
         <hr>
       </div>
     </div>
