--- a/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.html
+++ b/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.html
@@ -119,6 +119,7 @@
           
         </div>
         <div class="col-sm-2 dates">
+          <i style ="font-size: 30px" class="fa fa-map-marker" aria-hidden="true"></i>
           <span>{{'PLACE' | translate}}: {{book.Place}}</span>
         </div>
         <div class="col-sm-3 dates">
