--- a/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.css
+++ b/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
+    position: relative;
     
 }
 .sep{
@@ -25,6 +26,12 @@ input{
 }
 select,input{
     height: 30px;
+}
+.picker{
+    z-index: 300;
+    position: absolute;
+    bottom: -20px;
+    left: -100px;
 }
 form{
     width: 100%;
@@ -57,7 +64,6 @@ form{
 }
 .form-container{
     width: 100%;
-    
     border-radius: 10px;
     border: 1px solid black;
     padding: 20px;
