--- a/CarsCrete/ClientApp/src/app/date-picker/date-picker.component.css
+++ b/CarsCrete/ClientApp/src/app/date-picker/date-picker.component.css
@@ -13,6 +13,9 @@
 .header i:hover{
     color:rgb(53, 53, 253);
 }
+.choosed-date{
+    background-color: rgb(255, 106, 106) !important;
+}
 .header .period{
     display: flex;
     font-size: 20px;
@@ -48,9 +51,33 @@
     margin-left: 0;
 }
 .container{
+    z-index: 500 !important;
     width: 300px;
     padding: 10px;
     margin: 0;
+    position: absolute;
+
+    background-color: white;
+    box-shadow: 0 0 5px black;
+}
+.current-date{
+    height: 30px;
+    display: flex;
+    align-items: center;
+    border-radius: 4px;
+    border: 1px solid gray;
+}
+.container111{
+    position: relative;
+}
+.blur-date{
+    position: fixed;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0 !important;
+    background-color: black;
 }
 .week-day-name{
     display: flex;
