Сделал date-picker надо тестить

--- a/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.html
+++ b/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.html
@@ -134,14 +134,15 @@
                 </div>
                 <div class="col-sm-6">
                   <div class="item">
-                      <span [ngClass]="{ 'is-invalid': submitted && DateStartError }">{{'DATE_START'|translate}}</span>
+                      <span [ngClass]="{ 'is-invalid': submitted && errors.DateStart }">{{'DATE_START'|translate}}</span>
                       <!--<input formControlName="DateStart" [ngClass]="{ 'is-invalid': submitted && f.DateStart.errors }" type="date" value="{{book.DateStart?book.DateStart:''}}" #DateStart required>
                       <div *ngIf="submitted && f.DateStart.errors" class="invalid-feedback">
                           <span class="d-block is-invalid" *ngIf="f.DateStart.errors.required">{{'ENTER_DATE'|translate}}</span>
                           
                       </div> -->
-                      <date-picker  [Out]="book" [Prop]="'DateStart'" ></date-picker>
-                      <div *ngIf="submitted && DateStartError" class="invalid-feedback">
+                      <date-picker  [Out]="book" [Prop]="'DateStart'" [Errors]="errors" [MinDate]="minDate" [Intervals]="invalidIntarvals" [DateStart]="book.DateStart"
+                      [DateFinish]="book.DateFinish"></date-picker>
+                      <div *ngIf="submitted && errors.DateStart" class="invalid-feedback">
                           <span class="d-block is-invalid" >{{'ENTER_DATE'|translate}}</span>
                           
                       </div>
@@ -150,14 +151,22 @@
                       
                   </div>
                   <div class="item">
-                      <span [ngClass]="{ 'is-invalid': submitted && DateFinishError }">{{'DATE_END'|translate}}</span>
+                      <span [ngClass]="{ 'is-invalid': submitted && errors.DateFinish }">{{'DATE_END'|translate}}</span>
                       <!--<input formControlName="DateFinish" [ngClass]="{ 'is-invalid': submitted && f.DateFinish.errors }" type="date" #DateFinish required>
                       <div *ngIf="submitted && f.DateFinish.errors" class="invalid-feedback">
                           <span class="d-block is-invalid" *ngIf="f.DateFinish.errors.required">{{'ENTER_DATE'|translate}}</span>
                           
                       </div> -->
-                      <date-picker  [Out]="book" [Prop]="'DateFinish'" ></date-picker>
-                      <div *ngIf="submitted && DateFinishError" class="invalid-feedback">
+                      <date-picker  
+                        [Out]="book" 
+                        [Prop]="'DateFinish'" 
+                        [Errors]="errors" 
+                        [MinDate]="minDate" 
+                        [Intervals]="invalidIntarvals"
+                        [DateStart]="book.DateStart"
+                        [DateFinish]="book.DateFinish"
+                      ></date-picker>
+                      <div *ngIf="submitted && errors.DateFinish" class="invalid-feedback">
                           <span class="d-block is-invalid" >{{'ENTER_DATE'|translate}}</span>
                           
                       </div>
