--- a/CarsCrete/ClientApp/src/app/date-picker/date-picker.component.css
+++ b/CarsCrete/ClientApp/src/app/date-picker/date-picker.component.css
@@ -51,22 +51,60 @@
     margin-left: 0;
 }
 .container{
-    z-index: 500 !important;
+    z-index: 500 ;
     width: 300px;
+    transition: 0.3s ease-in-out;
     padding: 10px;
     margin: 0;
     position: absolute;
-
+    top:25px;
+    opacity: 0;
+    left:5px;
+    max-height: 0;
+    overflow: hidden;
     background-color: white;
     box-shadow: 0 0 5px black;
 }
+.opposite-choose{
+    background-color: rgb(255, 106, 106) !important;
+    border-radius: 0;
+    margin-left:0;
+    margin-right: 0;
+    width: 40px;
+}
+.choosed-start{
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    margin-right: 0;
+    width: 35px;
+}
+.choosed-finish{
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    margin-left: 0;
+    width: 35px;
+}
+.show-picker{
+    opacity: 1;
+    top:55px;
+    max-height: 1000px;
+    z-index: 700 !important;
+}
 .current-date{
+    position: relative;
+    z-index: 600;
     height: 30px;
+    background-color: white;
     display: flex;
     align-items: center;
     border-radius: 4px;
     border: 1px solid gray;
 }
+.invalid-date{
+    background-color:rgba(230, 230, 230, 0.582) !important; 
+    text-decoration: line-through;
+}
+
 .container111{
     position: relative;
 }
@@ -91,5 +129,5 @@
     border-bottom: 2px solid rgba(216, 216, 216, 0.26);
 }
 .not-current{
-    background-color: rgba(236, 236, 236, 0.534);
+    background-color: rgb(203, 242, 255);
 }
