--- a/CarsCrete/ClientApp/src/app/date-picker/date-picker.component.html
+++ b/CarsCrete/ClientApp/src/app/date-picker/date-picker.component.html
@@ -1,7 +1,7 @@
 <div class="current-date" (click)="hide()">
     <span>{{Out[Prop] | date:'dd.MM.yyyy'}}</span>
 </div>
-<div *ngIf="showPicker" class="container">
+<div [ngClass]="{'show-picker':showPicker}" class="container">
   
   <div class="header">
     <i style="display: flex; justify-content: flex-end" class="fa fa-angle-left" aria-hidden="true" (click)="prev()"></i>
@@ -16,7 +16,9 @@
       <div class="rows" *ngFor="let week of calendar">
         <div class="cols" *ngFor="let day of week; let i = index">
           
-          <div class="item" [ngClass]="{'not-current':!getClass(day), 'choosed-date':Out[Prop]==day}" (click)="pick(day)">{{day | date: 'dd'}}</div>
+          <div (mouseover)="shooseProgress(day, true)" (mouseleave)="shooseProgress(day, false)" class="item" [ngClass]="{'not-current':!getClass(day),'opposite-choose':checkOppositeChoose(day) , 'choosed-date':(DateStart?DateStart.getTime()==day.getTime():false) || (DateFinish?DateFinish.getTime()==day.getTime():false), 'invalid-date':(day.getTime()<MinDate.getTime() || (MaxDate?day.getTime()>MaxDate.getTime():false) || !checkDate(day)), 'choosed-start':getChoosed(day,true), 'choosed-finish':getChoosed(day,false)}" (click)="pick(day)">
+            {{day | date: 'dd'}}
+          </div>
         </div>
       </div>
     </div>
@@ -24,6 +26,6 @@
 </div>
 
 
-<div *ngIf="showPicker" class="background-blur" (click)="hide()"></div>
+<div *ngIf="showPicker" style="background: transparent; z-index: 600" class="background-blur" (click)="hide()"></div>
 
 
